sprzątanie po modalboxie

--- a/app/views/account/dashboard.html.erb
+++ b/app/views/account/dashboard.html.erb
@@ -1,4 +1,4 @@
-<%= stylesheet_link_tag 'autocompleter', 'modalbox'  %>
+<%= stylesheet_link_tag 'autocompleter'  %>
 <%= javascript_include_tag :all %>
     <script type="text/javascript">
       function log(data){
