# On branch master # Changes to be committed: #   (use "git reset HEAD <file>..." to unstage) # #	modified:   app/controllers/account_controller.rb #	modified:   app/controllers/application.rb #	modified:   app/controllers/intro_controller.rb #	modified:   app/models/account.rb #	modified:   app/models/activation.rb #	new file:   app/models/activator.rb #	new file:   app/views/account/signup.html.erb #	new file:   app/views/activator/signup_token.erb #	modified:   app/views/intro/index.html.erb #	modified:   app/views/layouts/oldschool.erb #	new file:   config/initializers/smtp_gmail.rb #	new file:   config/mailer.yml #	modified:   config/routes.rb #	modified:   db/migrate/20081103132448_create_transfers.rb #	deleted:    public/index.php #	deleted:    public/login.php #	modified:   public/stylesheets/global.css #	new file:   test/fixtures/activator/deliver_signup_token #	new file:   test/fixtures/activator/signup_token #	new file:   test/unit/activator_test.rb #	new file:   vendor/plugins/action_mailer_tls/README #	new file:   vendor/plugins/action_mailer_tls/init.rb #	new file:   vendor/plugins/action_mailer_tls/lib/smtp_tls.rb #

--- a/app/views/intro/index.html.erb
+++ b/app/views/intro/index.html.erb
@@ -1,2 +1,9 @@
-<h1>Intro#index</h1>
-<p>Find me in app/views/intro/index.html.erb</p>
+  <form method="POST" action="/login">
+        <input name="email" class="text_field huge" style="width:200px;font-size:30px;" type="text" value="email"/>
+        <input name="password" class="text_field huge" style="width:200px;font-size:30px;display:inline;" type="password" value="saddam">
+    <input value="Zaloguj" style="margin-top: 10px" class="big_button" class="text_field huge" type="submit"/>
+  </form>
+  <form method="POST" action="/join">
+        <input name="email" class="text_field huge" style="width:200px;font-size:30px;" type="text" value="email"/>
+    <input value="Zarejestruj sie" style="margin-top: 10px" class="big_button" class="text_field huge" type="submit"/>
+  </form>
