signup controller, errorek powitalny

--- a/app/views/activator/signup_token.erb
+++ b/app/views/activator/signup_token.erb
@@ -1,1 +1,5 @@
-<a href="<%= "http://#{@host}/verify/#{@token}" %>">Aktywacja</a>
+<html>
+  <body>
+    <%= link_to 'aktywacja', 'http://' + @host + verify_path(:token => @token) %>
+  </body>
+</html>
