--- a/app/views/intro/index.html.erb
+++ b/app/views/intro/index.html.erb
@@ -1,9 +1,9 @@
-  <form method="POST" action="/login">
+  <form method="POST" action="/account/login">
         <input name="email" class="text_field huge" style="width:200px;font-size:30px;" type="text" value="email"/>
         <input name="password" class="text_field huge" style="width:200px;font-size:30px;display:inline;" type="password" value="saddam">
     <input value="Zaloguj" style="margin-top: 10px" class="big_button" class="text_field huge" type="submit"/>
   </form>
-  <form method="POST" action="/join">
+  <form method="POST" action="/signup/send_authentication_email">
         <input name="email" class="text_field huge" style="width:200px;font-size:30px;" type="text" value="email"/>
     <input value="Zarejestruj sie" style="margin-top: 10px" class="big_button" class="text_field huge" type="submit"/>
   </form>
