--- a/app/views/signup/details_form.html.erb
+++ b/app/views/signup/details_form.html.erb
@@ -1,4 +1,4 @@
-  <form method="POST" action="/signup/finalize">
+  <form method="POST" action="/signup/create_account">
         Nick: <input name="name" class="text_field huge" style="width:200px;font-size:30px;display:inline;" type="text"><br/>
         Haslo: <input name="password" class="text_field huge" style="width:200px;font-size:30px;display:inline;" type="password"><br/>
         Powtorz: <input name="confirmation_password" class="text_field huge" style="width:200px;font-size:30px;display:inline;" type="password"><br/>
