zaproszenia wewnatrzzaqpkowe, poprawiony Account.know?, refaktoring buy'a

--- a/app/views/account/_new_friend.html.erb
+++ b/app/views/account/_new_friend.html.erb
@@ -1,5 +1,5 @@
 <div id="new_friend" style="display: none;">
-<form action="/friends/add">
+<form action="/friends/invite">
   <h2>Dodaj znajomego</h2>
   <input name="email" class="text_field huge" style="width:150px;font-size:20px;display:inline;" type="text" value="email"/><br/>
   <input value="Dodaj" class="big_button" style="margin: 10px 0 0 0;" type="submit"/>
