--- a/app/views/account/dashboard.html.erb
+++ b/app/views/account/dashboard.html.erb
@@ -12,9 +12,10 @@
     var sponsor,spongers
     
       Event.observe(window, 'load', function() {
-        window.sponsor = new Autocompleter('sponsor', friends_list)
+        window.spongers = new Autocompleter('spongers', friends_list, {multiple: true, onChosen: function(){$('deal_submit').focus()}})
+        window.sponsor = new Autocompleter('sponsor', friends_list, {onChosen: function(){window.spongers.input.focus()}})
         window.sponsor.push(current_user.name)
-        window.spongers = new Autocompleter('spongers', friends_list, {multiple: true})
+        
 <%@defualt_spongers and @defualt_spongers.each do |sponger| %>
           window.spongers.push('<%= sponger.name %>')
 <% end %>
@@ -42,50 +43,17 @@
       <a href="https://github.com/"><img src="/images/logo.png" alt="github"></a>
     </div>
     
-    <div class="topsearch">
-      <form action="/search" id="top_search_form" method="get">
-        <input class="search" name="q" type="search"> <input value="Search" type="submit">
-        <input name="type" value="Everything" type="hidden">
-        <input name="repo" value="" type="hidden">
-        <input name="langOverride" value="" type="hidden">
-        <input name="start_value" value="1" type="hidden">
-      </form>
-      <div class="links">
-        <a>Browse</a> | <a>Guides</a> | <a>Advanced</a>
-      </div>
-    </div>
-    
     
     
     <div style="border-top: 0pt none; border-bottom: 0pt none; position: relative; background-position: 0px -8px;" class="corner userbox">
       <div class="box">
         <%= gravatar_for @current_user %>
-                      
         <div class="top">
-          <div class="name">
-            <a href="https://github.com/">jedzej</a>
-          </div>
-          <div class="links">
-            <a href="https://github.com/account">account</a> |
-            <a href="https://github.com/jedzej">profile</a> |
-            <a href="https://github.com/logout">log out</a>
-          </div>
-        </div>
-        
-        <div class="bottom">
-          <div class="select">
-            <div class="site_links">
-              <a href="https://github.com/">dashboard</a> | <a href="http://gist.github.com/mine">gists</a>
+          <div class="name">jedzej</div>
+          <div class="site_links">
+              <a href="/dashboard">dashboard</a> |
+              <a href="/logout">logout</a>
             </div>
-            
-            <form action="/search" class="search_repos" method="get" style="display: none;">
-              <input id="q" name="q" size="18" type="search"> 
-              <input value="Search" type="submit">
-              <a href="#" class="cancel_search_link">x</a>
-            </form>
-          </div>
-          
-          <div class="inbox"> <span><a href="https://github.com/inbox">0</a></span> </div>
         </div>
       </div>
       <div style="overflow: hidden; width: 100%; font-size: 1px; position: absolute; padding-left: 1px; padding-right: 1px; height: 8px; top: -8px; left: -1px;"><div style="overflow: hidden; height: 8px; width: 8px; position: absolute; font-size: 1px; top: 0pt; right: 0pt;"><div style="overflow: hidden; height: 6px; width: 1px; position: absolute; font-size: 1px; background-color: rgb(234, 242, 245); top: 2px; left: 0px; background-position: -326px -1px;"></div><div style="overflow: hidden; height: 1px; width: 1px; position: absolute; font-size: 1px; background-color: rgb(234, 241, 244); top: 1px; left: 0px; background-position: -326px 0px;"></div><div style="overflow: hidden; height: 1px; width: 1px; position: absolute; font-size: 1px; background-color: rgb(221, 221, 221); opacity: 0.968627; top: 0px; left: 0px; background-position: -326px -1px;"></div><div style="overflow: hidden; height: 6px; width: 1px; position: absolute; font-size: 1px; background-color: rgb(234, 242, 245); top: 2px; left: 1px; background-position: -327px -1px;">
@@ -111,7 +79,7 @@
             </h2>
             </td></tr>
           </table>
-        <%= render :partial => 'feeds', :locals => { :feeds => @feeds } %>
+        <%= render :partial => 'feeds', :locals => { :feeds => @feeds , :page => @page, :total_pages => @total_pages} %>
       </div>
       <div id="new_deal" style="display:none;">
         <a href="javascript: show_page('feed_list')">newsy</a>
@@ -161,4 +129,5 @@
     </div>
     
   </div>
+  <div class="push"></div>
 </div>
