--- a/app/views/account/_deal_feed.html.erb
+++ b/app/views/account/_deal_feed.html.erb
@@ -1,81 +1,17 @@
-<!--<div>
-  <table width="100%" cellpadding="0">
-    <tr><td rowspan="2" valign="center" width="40px">
-<%= image_tag "icons/web-beer.gif" %>
-      </td><td align="left">
-<% deal = feed.deal; quantity = deal.spongers.count; -%>
-<%= "#{deal.description} za #{deal.cost} zł" %>
-      </td><td align="right">
-<%= "#{deal.created_at}" %>
-<%  if deal.is_enabled %>
-  <%= link_to image_tag('/icons/cross.png'), :controller => 'deals', :action => 'remove', :id => deal.id%>
-<% end %>
-    </td></tr>
-    <tr><td colspan="2">
-        <table cellpadding="0" cellspacing="0" width="100%">
-          <tr>
-            <td width="1px"><%= "#{deal.sponsor.name}&nbsp;->  " %></td>
-            <td>&nbsp;<%= "#{deal.spongers.map{ |s| s.name}.join', '}" %></td>
-            <td width="1px">&lt;&lt;<%= "#{deal.snitch.name}" %></td>
-          </tr>
-        </table>
-    </td></tr>
-  </table>
-</div>-->
-
+<script type="text/javascript">
+  function deal_feed_over_disabled(feed_box, id){
+    new Effect.Opacity($('deal_additional_info_' + id).setOpacity(0).setStyle({
+        height: feed_box.offsetHeight + 'px',
+        width: feed_box.offsetWidth + 'px',
+        display: 'block',
+      }), { from: 0, to: 0.7, duration: 0.5 });
+  }
+</script>
 <% deal = feed.deal; quantity = deal.spongers.count;  -%>
-<!--<div class="title" style="font-size:22px;"><%= deal.description.gsub(/[\s]/, "&nbsp;") %></div>-->
-<div style="margin: 0 0 0 20px;" onmouseover="$('deal_panel_<%= deal.id %>').show()" onmouseout="$('deal_panel_<%= deal.id %>').hide()">
-  <table width="100%">
-    <tr>
-      <td width="100" valign="top">
-        <%= "#{deal.sponsor.name}&nbsp;kupuje&nbsp;<b>#{deal.description.gsub(/\s/, "&nbsp;")}</b>&nbsp;za&nbsp;#{deal.cost}&nbsp;zl&nbsp;dla:&nbsp;" %>
-      </td>
-      <td width="*">
-        <%= deal.spongers.map{ |s| s.name}.join(', ') %>
-      </td>
-      <td align="right" width="150" valign="top">
-        <%= feed.created_at.strftime("%d.%m.%Y - %H:%M:%S") %>
-      </td>
-    </tr>
-    <tr>
-      <td colspan="3">
-        <div style="float:none;display:block;">
-          
-          <table width="100%">
-            <tr>
-              <td rowspan="2" width="60" valign="middle"><%= gravatar_for(deal.sponsor, :size => 70)%></td>
-              <td align="center" width="10" height="1" valign="middle">
-                <img src="/images/icons/<%= deal.icon.to_s %>.gif"/><br/>
-                <span class="strzalka" style="float:bottom;" valign="top" height="*">
-                  <span><%= deal.cost %> zł</span>
-                </span>
-              </td>
-              <td rowspan="2" width="300" valign="middle">
-                <% l = deal.spongers.length; size = l == 4 ? 54 : l > 4 ? 40 : 77 %>
-                <% deal.spongers.each do |sponger| -%>
-                  <%= gravatar_for(sponger, :size => size) %>
-                <% end -%>
-              </td>
-              <td rowspan="2" width="*" valign="middle">
-                <div id="deal_panel_<%= deal.id %>" style="display:none">
-                  <%  if deal.is_enabled %>
-                    <%= link_to image_tag('icons/cross.png'), :controller => 'deals', :action => 'remove', :id => deal.id%>
-                  <% end %>
-                </div>
-              </td>
-            </tr>
-            <tr>
-              <td>
-                
-              </td>
-            </tr>
-          </table>
-          
-          
-          
-        </div>
-      </td>
-    </tr>
-  </table>
+<div style="margin: 0 0 0 0;">
+<% if deal.is_enabled %>
+  <%= render :partial => 'deal_feed_enabled', :locals => {:deal => deal} %>
+<% else %>
+  <%= render :partial => 'deal_feed_disabled', :locals => {:deal => deal} %>
+<% end %>
 </div>
