--- a/app/views/account/dashboard.html.erb
+++ b/app/views/account/dashboard.html.erb
@@ -75,7 +75,7 @@
            <tr><td valign="center" width="32px">
               <%= image_tag "icons/cart_add.png" %>
             </td><td align="left"><h2>
-              <a href="javascript:show_page('new_deal')" style="color:green">Dodaj zaqpek</a>
+              <a href="javascript:show_page('new_deal')" style="color:#22BB22;font-size:25px;">Dodaj zaqpek</a>
             </h2>
             </td></tr>
           </table>
@@ -125,7 +125,7 @@
           </tr>
         <% end -%>
       </table>
-      <%= link_to "#{image_tag 'icons/plus.png'} Dodaj", 'javascript:show_page("new_friend")' %>
+      <%= link_to "#{image_tag 'icons/invite.png'} Dodaj", 'javascript:show_page("new_friend")' %>
     </div>
     
   </div>
